--- a/html/contacto.html
+++ b/html/contacto.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -13,6 +14,7 @@
     <link rel="shortcut icon" href="../img/logo.png" type="image/x-icon">
     <link rel="stylesheet" href="../css/style.css">
 </head>
+
 <body class="container-fluid">
     <header class="navbar navbar-expand-lg bg-body-tertiary" data-bs-theme="dark">
         <div class="container-fluid">
@@ -51,17 +53,21 @@
             <ul>
                 <li class="navegacion">
                     <button>
-                        <a href="https://web.whatsapp.com/" target="_blank"><img src="../img/logowpp.jpg" alt="logo de whatsapp" class="logo"></a>
+                        <a href="https://web.whatsapp.com/" target="_blank"><img src="../img/logowpp.jpg"
+                                alt="logo de whatsapp" class="logo"></a>
                     </button>
                 </li>
                 <li class="navegacion">
                     <button>
-                        <a href="https://instagram.com" target="_blank"><img src="../img/logoig.webp" alt="logo de instagram" class="logo"></a></li>
-                    </button>
+                        <a href="https://instagram.com" target="_blank"><img src="../img/logoig.webp"
+                                alt="logo de instagram" class="logo"></a>
+                </li>
+                </button>
                 </li>
                 <li class="navegacion">
                     <button>
-                    <a href="https://facebook.com" target="_blank"><img src="../img/logofacebook.png" alt="Logo de facebook" class="logo"></a>
+                        <a href="https://facebook.com" target="_blank"><img src="../img/logofacebook.png"
+                                alt="Logo de facebook" class="logo"></a>
                     </button>
                 </li>
             </ul>
@@ -69,25 +75,31 @@
         <h2 class="subPrinc" data-aos="flip-down">¿Dónde estamos?</h2>
         <br>
         <div class="imagenesInicio" data-aos="flip-down" data-aos-duration="1500">
-        <iframe src="https://www.google.com/maps/embed?pb=!1m17!1m12!1m3!1d14121.768707690875!2d-64.25092478780516!3d-27.76534655305076!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m2!1m1!2zMjfCsDQ1JzM0LjAiUyA2NMKwMTQnNDkuMSJX!5e0!3m2!1ses!2sar!4v1689384443164!5m2!1ses!2sar" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade" class="video"></iframe>
+            <iframe
+                src="https://www.google.com/maps/embed?pb=!1m17!1m12!1m3!1d14121.768707690875!2d-64.25092478780516!3d-27.76534655305076!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m2!1m1!2zMjfCsDQ1JzM0LjAiUyA2NMKwMTQnNDkuMSJX!5e0!3m2!1ses!2sar!4v1689384443164!5m2!1ses!2sar"
+                width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
+                referrerpolicy="no-referrer-when-downgrade" class="video"></iframe>
         </div>
     </main>
     <footer>
         <ul>
-            <li class="navegacion"><a href="https://instagram.com" target="_blank"><img src="../img/logoig.webp" alt="logo de instagram" class="logo"></a></li>
-            <li class="navegacion"><a href="https://facebook.com" target="_blank"><img src="../img/logofacebook.png" alt="Logo de facebook" class="logo"></a></li>
-            <li class="navegacion"><a href="contacto.html" target="_blank"><img src="../img/logocon.png" alt="logo de telefono" class="logo logoCon"></a></li>
+            <li class="navegacion"><a href="https://instagram.com" target="_blank"><img src="../img/logoig.webp"
+                        alt="logo de instagram" class="logo"></a></li>
+            <li class="navegacion"><a href="https://facebook.com" target="_blank"><img src="../img/logofacebook.png"
+                        alt="Logo de facebook" class="logo"></a></li>
+            <li class="navegacion"><a href="contacto.html" target="_blank"><img src="../img/logocon.png"
+                        alt="logo de telefono" class="logo logoCon"></a></li>
         </ul>
         <p>Todos los derechos reservados.</p>
     </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm"
-        crossorigin="anonymous">
-    </script>
+        integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous">
+        </script>
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script>
         AOS.init();
     </script>
 </body>
+
 </html>
