--- a/html/tienda.html
+++ b/html/tienda.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -11,6 +12,7 @@
     <link rel="shortcut icon" href="../img/logo.png" type="image/x-icon">
     <link rel="stylesheet" href="../css/style.css">
 </head>
+
 <body class="container-fluid">
     <header class="navbar navbar-expand-lg bg-body-tertiary" data-bs-theme="dark">
         <div class="container-fluid">
@@ -45,34 +47,37 @@
     <br><br>
     <main>
         <h1>Hacé tu pedido</h2>
-        <br>
-        <form>
-            <label for="nombre"> Nombre: </label>
-            <input type="text" id="nombre" class="formulario">
-            <br><br>
-            <label for="direccion">Dirección: </label>
-            <input type="text" id="direccion" class="formulario">
-            <br><br>
-            <label for="mensaje">Pedido:</label>
             <br>
-            <textarea name="" id="mensaje" cols="30" rows="10"></textarea>
-            <br><br>
-            <button class="botones"><a href="compra.html" class="button">Pedir</a></button>
-        </form>
+            <form>
+                <label for="nombre"> Nombre: </label>
+                <input type="text" id="nombre" class="formulario">
+                <br><br>
+                <label for="direccion">Dirección: </label>
+                <input type="text" id="direccion" class="formulario">
+                <br><br>
+                <label for="mensaje">Pedido:</label>
+                <br>
+                <textarea name="" id="mensaje" cols="30" rows="10"></textarea>
+                <br><br>
+                <button class="botones"><a href="compra.html" class="button">Pedir</a></button>
+            </form>
     </main>
     <br><br>
     <footer>
         <ul>
-            <li class="navegacion"><a href="https://instagram.com" target="_blank"><img src="../img/logoig.webp" alt="logo de instagram" class="logo"></a></li>
-            <li class="navegacion"><a href="https://facebook.com" target="_blank"><img src="../img/logofacebook.png" alt="Logo de facebook" class="logo"></a></li>
-            <li class="navegacion"><a href="contacto.html" target="_blank"><img src="../img/logocon.png" alt="logo de telefono" class="logo logoCon"></a></li>
+            <li class="navegacion"><a href="https://instagram.com" target="_blank"><img src="../img/logoig.webp"
+                        alt="logo de instagram" class="logo"></a></li>
+            <li class="navegacion"><a href="https://facebook.com" target="_blank"><img src="../img/logofacebook.png"
+                        alt="Logo de facebook" class="logo"></a></li>
+            <li class="navegacion"><a href="contacto.html" target="_blank"><img src="../img/logocon.png"
+                        alt="logo de telefono" class="logo logoCon"></a></li>
         </ul>
         <p>Todos los derechos reservados.</p>
     </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm"
-        crossorigin="anonymous">
-    </script>
+        integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous">
+        </script>
 </body>
+
 </html>
