--- a/html/variedades.html
+++ b/html/variedades.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -9,6 +10,7 @@
     <link rel="shortcut icon" href="../img/logo.png" type="image/x-icon">
     <link rel="stylesheet" href="../css/style.css">
 </head>
+
 <body class="container-fluid">
     <header class="navbar navbar-expand-lg bg-body-tertiary" data-bs-theme="dark">
         <div class="container-fluid">
@@ -45,75 +47,90 @@
         <!-- Carrusel -->
         <div id="carouselExampleCaptions" class="carousel slide">
             <div class="carousel-indicators">
-              <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-              <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
-              <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
-              <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="3" aria-label="Slide 4"></button>
+                <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active"
+                    aria-current="true" aria-label="Slide 1"></button>
+                <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1"
+                    aria-label="Slide 2"></button>
+                <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2"
+                    aria-label="Slide 3"></button>
+                <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="3"
+                    aria-label="Slide 4"></button>
             </div>
             <div class="carousel-inner">
-              <div class="carousel-item active">
-                <img src="https://www.lavoz.com.ar/resizer/LEt9HIyG8m2WwoMXQe92e5oLbeY=/980x640/smart/filters:quality(75):format(webp)/cloudfront-us-east-1.images.arcpublishing.com/grupoclarin/4J3UJNMRD5DCXODMPUHI3BS3TE.jpg" class="d-block w-100 h-100" alt="Imagen de un lomito completo">
-                <div class="carousel-caption">
-                    <div class="descLomos">
-                        <h3>Completo</h3>
-                        <p>Pan, lomo, tomate, lechuga, queso, jamon, huevo y mayonesa.</p>
+                <div class="carousel-item active">
+                    <img src="https://www.lavoz.com.ar/resizer/LEt9HIyG8m2WwoMXQe92e5oLbeY=/980x640/smart/filters:quality(75):format(webp)/cloudfront-us-east-1.images.arcpublishing.com/grupoclarin/4J3UJNMRD5DCXODMPUHI3BS3TE.jpg"
+                        class="d-block w-100 h-100" alt="Imagen de un lomito completo">
+                    <div class="carousel-caption">
+                        <div class="descLomos">
+                            <h3>Completo</h3>
+                            <p>Pan, lomo, tomate, lechuga, queso, jamon, huevo y mayonesa.</p>
+                        </div>
                     </div>
                 </div>
-              </div>
-              <div class="carousel-item">
-                <img src="https://images.loveat.la/media/4363/images/plates/166966" class="d-block w-100 h-100" alt="Imagen de un lomito Lomojohn">
-                <div class="carousel-caption">
-                    <div class="descLomos">
-                        <h3>Lomojohn</h3>
-                        <p>Pan, lomo, tomate, lechuga, queso, cbolla caramelizada, pimientos asados, salsa BBQ, jamon, huevo y mayonesa.</p>
+                <div class="carousel-item">
+                    <img src="https://images.loveat.la/media/4363/images/plates/166966" class="d-block w-100 h-100"
+                        alt="Imagen de un lomito Lomojohn">
+                    <div class="carousel-caption">
+                        <div class="descLomos">
+                            <h3>Lomojohn</h3>
+                            <p>Pan, lomo, tomate, lechuga, queso, cbolla caramelizada, pimientos asados, salsa BBQ,
+                                jamon, huevo y mayonesa.</p>
+                        </div>
                     </div>
                 </div>
-              </div>
-              <div class="carousel-item">
-                <img src="../img/lomocriollo.jpg" class="d-block w-100 h-100" alt="Imagen de un lomito criollo">
-                <div class="carousel-caption">
-                    <div class="descLomos">
-                        <h3>Criollo</h3>
-                        <p>Pan, lomo, tomate, lechuga, queso, salsa criolla (tomate, cebolla, pimiento) y mayonesa.</p>
+                <div class="carousel-item">
+                    <img src="../img/lomocriollo.jpg" class="d-block w-100 h-100" alt="Imagen de un lomito criollo">
+                    <div class="carousel-caption">
+                        <div class="descLomos">
+                            <h3>Criollo</h3>
+                            <p>Pan, lomo, tomate, lechuga, queso, salsa criolla (tomate, cebolla, pimiento) y mayonesa.
+                            </p>
+                        </div>
                     </div>
                 </div>
-              </div>
-              <div class="carousel-item">
-                <img src="../img/Lomo-con-Roquefort-.jpg" class="d-block w-100 h-100" alt="Imagen de un lomito con roquefort">
-                <div class="carousel-caption">
-                    <div class="descLomo">
-                        <h3>Johnblue</h3>
-                        <p>Pan, lomo, tomate, lechuga, queso, queso roquefórt, queso muzzarella y mayonesa.</p>
+                <div class="carousel-item">
+                    <img src="../img/Lomo-con-Roquefort-.jpg" class="d-block w-100 h-100"
+                        alt="Imagen de un lomito con roquefort">
+                    <div class="carousel-caption">
+                        <div class="descLomo">
+                            <h3>Johnblue</h3>
+                            <p>Pan, lomo, tomate, lechuga, queso, queso roquefórt, queso muzzarella y mayonesa.</p>
+                        </div>
                     </div>
                 </div>
-              </div>
             </div>
-            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
-              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-              <span class="visually-hidden">Anterior</span>
+            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions"
+                data-bs-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Anterior</span>
             </button>
-            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
-              <span class="carousel-control-next-icon" aria-hidden="true"></span>
-              <span class="visually-hidden">Siguiente</span>
+            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions"
+                data-bs-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Siguiente</span>
             </button>
-          </div>
+        </div>
     </main>
     <div>
-        <p class="mensajeImp">Si quieres que agreguemos alguno, por favor comunicate con nosotros por <a href="ayuda.html" class="btnAqui">aquí</a>.</p>
+        <p class="mensajeImp">Si quieres que agreguemos alguno, por favor comunicate con nosotros por <a
+                href="ayuda.html" class="btnAqui">aquí</a>.</p>
     </div>
     <footer>
         <ul>
-            <li class="navegacion"><a href="https://instagram.com" target="_blank"><img src="../img/logoig.webp" alt="logo de instagram" class="logo"></a></li>
-            <li class="navegacion"><a href="https://facebook.com" target="_blank"><img src="../img/logofacebook.png" alt="Logo de facebook" class="logo"></a></li>
-            <li class="navegacion"><a href="contacto.html" target="_blank"><img src="../img/logocon.png" alt="logo de telefono" class="logo logoCon"></a></li>
+            <li class="navegacion"><a href="https://instagram.com" target="_blank"><img src="../img/logoig.webp"
+                        alt="logo de instagram" class="logo"></a></li>
+            <li class="navegacion"><a href="https://facebook.com" target="_blank"><img src="../img/logofacebook.png"
+                        alt="Logo de facebook" class="logo"></a></li>
+            <li class="navegacion"><a href="contacto.html" target="_blank"><img src="../img/logocon.png"
+                        alt="logo de telefono" class="logo logoCon"></a></li>
         </ul>
         <p>Todos los derechos reservados.</p>
     </footer>
 
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm"
-        crossorigin="anonymous">
-    </script>
+        integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous">
+        </script>
 </body>
+
 </html>
