--- a/index.html
+++ b/index.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Lomojohn</title>
-    <meta name="description" content="Lomitos de la mejor calidad en Lomojohn. Origen del lomito y el secreto de su maravilloso sabor.">
+    <meta name="description"
+        content="Lomitos de la mejor calidad en Lomojohn. Origen del lomito y el secreto de su maravilloso sabor.">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
@@ -12,6 +14,7 @@
     <link rel="stylesheet" href="./css/style.css">
 </head>
 <!-- Barra de navegacion -->
+
 <body class="container-fluid">
     <header class="navbar navbar-expand-lg bg-body-tertiary" data-bs-theme="dark">
         <div class="container-fluid">
@@ -48,29 +51,44 @@
     <br><br>
     <main>
         <h2 class="subPrinc" data-aos="flip-down" data-aos-duration="2000">¿Qué es el lomito?</h2>
-        <p>El lomito, de origen alemán pero ya totalmente nacionalizado, es un tradicional e infaltable plato dentro de las cartas de cada restaurant con menús de sánguches. Característico por su carne de lomo de res y sus magníficos agregados que lo pueden convertir en el mejor lomito con el gusto que te imagines, se ha convertido en uno de los favoritos de las personas.</p>
+        <p>El lomito, de origen alemán pero ya totalmente nacionalizado, es un tradicional e infaltable plato dentro de
+            las cartas de cada restaurant con menús de sánguches. Característico por su carne de lomo de res y sus
+            magníficos agregados que lo pueden convertir en el mejor lomito con el gusto que te imagines, se ha
+            convertido en uno de los favoritos de las personas.</p>
         <br>
-        <div class="imagenesInicio" data-aos="fade-down" data-aos-anchor-placement="top-bottom" data-aos-duration="2000">
+        <div class="imagenesInicio" data-aos="fade-down" data-aos-anchor-placement="top-bottom"
+            data-aos-duration="2000">
             <img src="img/lomitook.jpg" alt="imagen de un lomito">
         </div>
         <h2 class="subPrinc" data-aos="flip-down" data-aos-duration="2000">¿Cuál es el secreto de un buen lomito?</h2>
-        <p>El secreto de un buen lomito, sobre todo en la capital de Santiago del Estero, es la mayonesa casera, una delicia que no puede faltar para darle a cualquier lomito ese sabor especial. Cada bar o restaurant tiene su propia mayonesa, lo que le da el toque diferenciador del lugar. Nuestra mayonesa es hasta el momento la mejor, y solo se requiere de ingredientes básicos como huevo, limon, sal y aceite.</p>
+        <p>El secreto de un buen lomito, sobre todo en la capital de Santiago del Estero, es la mayonesa casera, una
+            delicia que no puede faltar para darle a cualquier lomito ese sabor especial. Cada bar o restaurant tiene su
+            propia mayonesa, lo que le da el toque diferenciador del lugar. Nuestra mayonesa es hasta el momento la
+            mejor, y solo se requiere de ingredientes básicos como huevo, limon, sal y aceite.</p>
         <br>
-        <div class="imagenesInicio" data-aos="fade-down" data-aos-anchor-placement="top-bottom" data-aos-duration="2000">
+        <div class="imagenesInicio" data-aos="fade-down" data-aos-anchor-placement="top-bottom"
+            data-aos-duration="2000">
             <img src="img/mayonesa-casera.jpg" alt="imagen de la mayonesa casera">
         </div>
         <h2 class="subPrinc" data-aos="flip-down" data-aos-duration="2000">¿Cómo se hace un lomito santiagueño?</h2>
         <br>
-        <div class="imagenesInicio" data-aos="fade-down" data-aos-anchor-placement="top-bottom" data-aos-duration="2000">
-            <iframe width="560" height="315" src="https://www.youtube.com/embed/csPC5udFhAI" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen class="video" alt="video de cómo se hace un lomito"></iframe>
+        <div class="imagenesInicio" data-aos="fade-down" data-aos-anchor-placement="top-bottom"
+            data-aos-duration="2000">
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/csPC5udFhAI"
+                title="YouTube video player" frameborder="0"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                allowfullscreen class="video" alt="video de cómo se hace un lomito"></iframe>
         </div>
     </main>
     <br><br>
     <footer>
         <ul>
-            <li class="navegacion"><a href="https://instagram.com" target="_blank"><img src="./img/logoig.webp" alt="logo de instagram" class="logo"></a></li>
-            <li class="navegacion"><a href="https://facebook.com" target="_blank"><img src="./img/logofacebook.png" alt="Logo de facebook" class="logo"></a></li>
-            <li class="navegacion"><a href="html/contacto.html" target="_blank"><img src="./img/logocon.png" alt="logo de telefono" class="logo logoCon"></a></li>
+            <li class="navegacion"><a href="https://instagram.com" target="_blank"><img src="./img/logoig.webp"
+                        alt="logo de instagram" class="logo"></a></li>
+            <li class="navegacion"><a href="https://facebook.com" target="_blank"><img src="./img/logofacebook.png"
+                        alt="Logo de facebook" class="logo"></a></li>
+            <li class="navegacion"><a href="html/contacto.html" target="_blank"><img src="./img/logocon.png"
+                        alt="logo de telefono" class="logo logoCon"></a></li>
         </ul>
         <p>Todos los derechos reservados.</p>
     </footer>
@@ -79,14 +97,14 @@
 
 
 
-    
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm"
-        crossorigin="anonymous">
-    </script>
+        integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous">
+        </script>
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script>
         AOS.init();
     </script>
 </body>
+
 </html>
